@@ -24,7 +24,9 @@ int RetrCertMsg::process ()
     const char *certData;
 
     EMIT_ERROR_ERR_IF (_cfg == NULL);
-    LIBENCLOUD_DELETE (_client);
+
+    // client already destroyed via deleteLater()
+    //LIBENCLOUD_DELETE (_client);
     LIBENCLOUD_ERR_IF ((_client = new Client) == NULL);
 
     EMIT_ERROR_ERR_IF (setupece::loadSslConfig(setupece::ProtocolTypeInit, _cfg, url, config));
@@ -49,7 +51,6 @@ int RetrCertMsg::process ()
     EMIT_ERROR_ERR_IF (_encodeRequest(url, params));
 
     // listen to signals from client
-    disconnect(_client, 0, this, 0);
     connect(_client, SIGNAL(error(libencloud::Error)), this, SIGNAL(error(libencloud::Error)));
     connect(_client, SIGNAL(complete(QString)), this, SLOT(_clientComplete(QString)));
 
@@ -71,7 +72,7 @@ void RetrCertMsg::_clientComplete (const QString &response)
 
     emit processed();
 err:
-    _client->deleteLater();
+    sender()->deleteLater();
     return;
 }
 
