@@ -29,7 +29,9 @@ int RetrConfMsg::process ()
     QMap<QByteArray, QByteArray> headers;
 
     EMIT_ERROR_ERR_IF (_cfg == NULL);
-    LIBENCLOUD_DELETE (_client);
+
+    // client already destroyed via deleteLater()
+    //LIBENCLOUD_DELETE (_client);
     LIBENCLOUD_ERR_IF ((_client = new Client) == NULL);
 
     EMIT_ERROR_ERR_IF (setupece::loadSslConfig(setupece::ProtocolTypeOp, _cfg, url, config));
@@ -38,7 +40,6 @@ int RetrConfMsg::process ()
     EMIT_ERROR_ERR_IF (_encodeRequest(url, params));
 
     // setup signals from client
-    disconnect(_client, 0, this, 0);
     connect(_client, SIGNAL(error(libencloud::Error)), this, SIGNAL(error(libencloud::Error)));
     connect(_client, SIGNAL(complete(QString)), this, SLOT(_clientComplete(QString)));
 
@@ -60,7 +61,7 @@ void RetrConfMsg::_clientComplete (const QString &response)
 
     emit processed();
 err:
-    _client->deleteLater();
+    sender()->deleteLater();
     return;
 }
 
