@@ -1,6 +1,7 @@
 ChangeLog file for Endian libencloud
 
 next:
+	- setup: fix possible crashes upon error due to double delete
 	- vpn: allow timeout=0 (no timer)
 	- etc: default verbosity=7 for ECE/SECE
 	- ece: fix compilation error in http/handler1.ccp;
